# cvgen

./: .gitignore  LICENSE  README.md  example.yaml  pyproject.toml
cvgen/: main.py  models.py
cvgen/templates/: index.html.j2  style.css
templates/: style.css
tests/: test_cvgen.py
