[tool.poetry]
name = "cvgen"
version = "0.1.0"
description = ""
authors = ["Vadim <vadim.galaktionov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
weasyprint = "^47.0"
pyyaml = "^5.1"
attrs = "^19.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
